controls/checkbox/checkbox.css
.checkbox
{
    font-family: Inter, sans-serif;
    font-size:   11px;
    display:     inline-block;
    width:       auto;
    height:      24px;
}


.checkboxCheck
{
    display:       inline-block;
    width:         12px;
    height:        12px;
    border-radius: 2px;
    transform:     translateY(2px);
}


.checkboxText
{
    color:       var(--figma-color-text);
    display:     inline;
    width:       auto;
    height:      auto;
    margin-left: 10px;
}

